Css fixes: search input line fix, carousel arrows hover, how we work headings fixes, homepage carousel block spacing

--- a/themes/custom/mat/sass/components/paragraphs/_paragraph--landing-page-statistics.scss
+++ b/themes/custom/mat/sass/components/paragraphs/_paragraph--landing-page-statistics.scss
@@ -11,7 +11,7 @@
   position: relative;
   z-index: 2;
   background: url($image-root + 'highlights/highlight-bg-meegale--top.png') repeat-x;
-
+  background-position-y: -1px;
   @media (min-width: $screen-sm-min) {
     padding: 30rem 0 2rem 0;
     margin-bottom: -300px;
@@ -52,7 +52,7 @@
     }
   }
 }
-  
+
 // Items basic styles
 .paragraph--type--statistics-item {
   text-align: center;
